--- a/leecode.vcxproj.filters
+++ b/leecode.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="leecode.cpp">
+    <ClCompile Include="11. Container With Most Water.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
