--- a/leecode.vcxproj
+++ b/leecode.vcxproj
@@ -152,7 +152,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="11. Container With Most Water.cpp" />
+    <ClCompile Include="22. Generate Parentheses.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
